# Kaggle_Competitions

./: main.py  pyproject.toml
house_price_pre/: CQR_V1.ipynb  CQR_V2.ipynb  error_trainer_v1.ipynb  mean_model_logs.txt  newfea_train_v1.ipynb  winner_v1_301.ipynb  winner_v3.ipynb  winner_v4.ipynb  xg_tfidf_focusv2_v5.ipynb  xg_tfidf_v1.ipynb  xg_tfidf_v2.ipynb  xg_tfidf_v3.ipynb  xg_tfidf_v4.ipynb  xg_train_hp_V2.ipynb  xg_word_vec_v1.ipynb  xgboost_full_v2.ipynb  xgboost_v3.ipynb
house_price_pre/.ipynb_checkpoints/: winner_v1_301-checkpoint.ipynb  winner_v2-checkpoint.ipynb  winner_v3-checkpoint.ipynb  winner_v4-checkpoint.ipynb  xg_tfidf_focusv2_v5-checkpoint.ipynb  xg_tfidf_v1-checkpoint.ipynb  xg_tfidf_v4-checkpoint.ipynb  xg_train_hp_V2-checkpoint.ipynb  xg_train_hp_v1-checkpoint.ipynb  xgboost_v3-checkpoint.ipynb
intro_extro_pre/: eda_v1.ipynb  model_v1.ipynb  submission.csv  submission_aggressive_features.csv  submission_core_api.csv  submission_diverse_stacking.csv  submission_ensemble_v4.csv  submission_leaderboard_hunter.csv  submission_optimized_v3.csv  submission_ultimate.csv  submission_v1.csv  submission_v2.csv  submission_v2.ipynb  submission_v3.ipynb  submission_v5.ipynb  submission_v6.ipynb  submission_v7.ipynb  submittion_v1.ipynb
intro_extro_pre/.ipynb_checkpoints/: submission_v7-checkpoint.ipynb
intro_extro_pre/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
intro_extro_pre/catboost_info/learn/: events.out.tfevents
intro_extro_pre/catboost_info/test/: events.out.tfevents
